# accounts-microservice

./: .gitignore  Dockerfile  README.md  app.py  config.py  kube-app-output.txt  requirements.txt  rest-create-done.txt  rest-delete-done.txt  rest-list-done.txt  rest-read-done.txt  rest-update-done.txt  security-headers-done.txt  setup.cfg  user-story.md
.github/workflows/: ci-build.yaml
deploy/: deployment.yaml
service/: __init__.py  models.py  routes.py
tests/: __init__.py  test_routes.py
workflows/: ci-build.yaml
