[metadata]
name = accounts-microservice
version = 1.0.0

[nosetests]
verbosity=2
with-coverage=1
cover-package=service
cover-erase=1

[coverage:run]
branch=True
source=service

[coverage:report]
show_missing=True

[flake8]
max-line-length=88
exclude=.git,__pycache__,venv

[pylint]
max-line-length=88
disable=
    C0114,
    C0115,
    C0116
